<resources>
    <string name="app_name">LetMeIn</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="name_hint">Name</string>
    <string name="letmein_slogan">Let Me In!</string>
    <string name="south_stairwell">South Side Stairwell</string>
    <string name="north_stairwell">North Side Stairwell</string>
    <string name="a_elevator">Level A Elevator Lobby</string>
    <string name="first_elevator">Level 1 Elevator Lobby</string>
    <string name="l_well">L Well</string>

    <string name="wsURI">letmein2-dev.cs.house</string>
    <string name="req_sent">Your request has been sent! </string>
    <string name="req_sent_exp">Sit tight while we wait for someone to respond to your request!</string>
    <string name="req_timeout">Your request timed out! 🔴</string>
    <string name="req_timeout_exp">Your request timed out unfortunately. Please try again later.</string>
    <string name="req_ack">Request answered! 🟢</string>
    <string name="req_ack_exp">Someone answered your request! They will be arriving shortly.</string>
    <string name="req_error">Connection failed! 🔴</string>
    <string name="req_error_exp">Unfortunately, there was an error in your request. Please try again later.</string>
    <string name="req_cancel">Request cancelled! 🟡</string>
    <string name="req_cancel_exp">Your request was cancelled! If you believe this was by mistake, try again.</string>
</resources>