<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">
        <ImageView
            android:id="@+id/cshLogo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@color/black"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/csh_logo" />

        <TextView
            android:id="@+id/letMeIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/black"
            android:text="@string/letmein_slogan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_500"
            android:textSize="70px" />
    </RelativeLayout>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <RelativeLayout
        android:id="@+id/locationButtons"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:id="@+id/lWellButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_well"
            android:layout_centerHorizontal="true"
            android:onClick="reqLWell"/>
        <Button
            android:id="@+id/firstElevatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_elevator"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/lWellButton"
            android:onClick="reqFirstElevator"/>
        <Button
            android:id="@+id/aElevatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_elevator"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/firstElevatorButton"
            android:onClick="reqAElevator"/>
        <Button
            android:id="@+id/northButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/north_stairwell"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/aElevatorButton"
            android:onClick="reqNorthStairwell"/>
        <Button
            android:id="@+id/southButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/south_stairwell"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/northButton"
            android:onClick="reqSouthStairwell"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>